--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://hitesh11gohel.github.io/e-commerce",
+  "homepage": "https://hiteshrg.github.io/e-commerce",
   "name": "e-commerce-app",
   "version": "0.1.0",
   "private": true,
